[package]
name = "melcome"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
readme = "README.md"
description = "Explicitly notate the distortion between the `Display`ed and its intention effortlessly. "
keywords = ["social"]
categories = ["rust-patterns"]

[badges]
maintenance = { status = "actively-developed"}


[dependencies]
uuid = {version = "1.1.2", features = ["v4"]}
ang = "0.6.0"



